[package]
name = "mb2-grayscale"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.13"
rtt-target = "0.4"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.critical-section-lock-mut]
git = "https://github.com/pdx-cs-rust-embedded/critical-section-lock-mut"
