[package]
name = "mb2-grayscale"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
critical-section-lock-mut = "0.1"
embedded-hal = "1.0"
microbit-v2 = "0.15"
panic-rtt-target = "0.2"
rtt-target = "0.6"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]
